--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "babel-preset-react-native": "^2.1.0",
+    "firebase": "^5.3.0",
     "react": "16.4.1",
     "react-native": "^0.55.4",
     "react-native-router-flux": "^4.0.0-beta.31"
